# Projeto11

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Escopo_LE_Frontend_v2.1.docx  Makefile  PLANO_EXECUCAO_LE_v2.md  README.md  desktop.ini  docker-compose.yml
documentos/: NeuralVision - Projeto de Extensão - COM Empresa.docx
documentos/Entrega 2/: Banner_FECAP_CCOMP5NA_NeuralVision.pptx
src/: datasets.yaml  detector.py  train_objetcs.py
src/backend/: .dockerignore  Dockerfile  README.md  cloud_api.py  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 20260507_1158_608b0e6b5598_initial_schema.py  20260511_1700_a3f1c2d4e5b6_add_weight_kg_to_evidences.py
src/backend/app/: main.py
src/backend/app/api/v1/: auth.py  evidences.py  groups.py  router.py  users.py
src/backend/app/core/: config.py  deps.py  security.py  storage.py
src/backend/app/db/: session.py
src/backend/app/models/: __init__.py  _enums.py  detection_session.py  evidence.py  group.py  group_member.py  refresh_token.py  user.py
src/backend/app/schemas/: auth.py  evidences.py  groups.py  users.py
src/backend/app/services/: auth.py  evidences.py  groups.py  users.py
src/backend/sql/: README.md  init.sql  seed.sql  storage_setup.sql
src/backend/tests/: test_auth_e2e.py  test_auth_validation.py  test_health.py
src/cv_detector/: .env.example  README.md  Tamanho.py  api_yolo.py  calibrador.py  detector.py  generate_dataset.py  requirements.txt  train_objects.py
src/frontend detector/: api_yolo.py  data.yaml  detector.py  generate_labels.py  requirements.txt  (+2 more)
(+311 files in other folders)
